--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="img/janette.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Maria Clara_</p>
         <h1>Eu estudo Programação</h1>
-        <p>Sou aluna do Colégio Estadual Padre Anchieta. Estudo pensamento computacional para estudantes do Ensino Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
+        <p>Sou aluna do Colégio Estadual Padre Anchieta. Estudo pensamento computacional para estudantes do Ensino Médio. Estudo sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
             que já desenvolvi!</p>
         <p>Minhas habilidades</p>
         <div>
@@ -32,7 +32,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/barbearia.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
                         <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
@@ -48,7 +48,7 @@
             <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/prguntas e respostas.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
                             Artificial</h5>
@@ -65,7 +65,7 @@
             <!-- Projeto 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/site viagens.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
                         </h5>
@@ -109,7 +109,7 @@
                         esteticamente agradável sem a necessidade de scripts complexos, com foco na usabilidade e na
                         experiência da pessoa usuária. A escolha da tipografia e do esquema de cores contribui para
                         a atmosfera acolhedora do site, incentivando a exploração da coleção de livros.</p>
-                    <img src="img/projeto-1.png" class="img-fluid w-100"
+                    <img src="img/barbearia.png" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
@@ -154,7 +154,7 @@
                         sobre a complexidade ética e social da IA, incentivando a reflexão crítica sobre o papel da
                         tecnologia em nossas vidas.
                     </p>
-                    <img src="img/projeto-2.png" class="img-fluid w-100"
+                    <img src="img/prguntas e respostas.png" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
@@ -195,7 +195,7 @@
                         interativa. O uso de cenários, movimentos, e diálogos dinâmicos ajuda a criar uma
                         experiência de aprendizado mais rica e memorável, encorajando os usuários a explorar e
                         interagir com o conteúdo de maneira ativa, em vez de passivamente.</p>
-                    <img src="img/projeto-3.png" alt="Projeto 3" class="img-fluid w-100">
+                    <img src="img/site viagens.png" alt="Projeto 3" class="img-fluid w-100">
                 </div>
                 <div class="modal-footer">
                     <a href="https://scratch.mit.edu/projects/951732825/">Ver projeto ao vivo</a>
@@ -209,7 +209,7 @@
             <i class="bi bi-github"></i>
             <a href="https://github.com/femascheti">GitHub</a>
         </div>
-        <p class="my-5 text-center">© Copyright 2024. Produzido por Fernanda Mascheti</p>
+        <p class="my-5 text-center">© Copyright 2024. Produzido por Maria Clara da Rocha</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
