--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Explorando o mundo: Acessando as belezas do mundo na ponta do dedo
                         </h5>
-                        <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
-                            astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
-                            forma da Terra através de cenários dinâmicos e diálogos informativos.
+                        <p class="card-text">Esse site te leva para os lugares mais incríveis do planeta!  Com um design super moderno e fácil de usar, você vai se sentir como se estivesse navegando por um feed do Insta cheio de destinos incríveis.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o projeto</button>
@@ -98,7 +96,7 @@
                         experiência da pessoa usuária. A escolha da tipografia e do esquema de cores contribui para
                         a atmosfera acolhedora do site, incentivando as pessoas as visitarem a loja.</p>
                     <img src="img/barbearia.png" class="img-fluid w-100"
-                        alt="Imagem representativa do projeto de uma biblioteca online">FlashFast é um site dedicado a aprimorar sua aprendizagem e memorização através de flashcards interativos. Com uma interface amigável e fácil de usar, você pode criar, organizar e revisar seus próprios flashcards em diversos temas, como idiomas, ciências, história, e muito mais. Personalize seus decks, adicione imagens, áudio e aproveite técnicas de repetição espaçada para otimizar seu estudo. 
+                        alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
                     <a href=file:///home/escola/Documentos/site-do-curso-continuacao-main/index.html>Ver projeto ao vivo</a>
@@ -145,33 +143,19 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">Explorando o mundo: Acessando as belezas do mundo na ponta do dedo</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto é uma aplicação educativa interativa focada em ensinar conceitos básicos de
-                        astronomia. Utiliza uma série de scripts associados a diferentes atores (sprites) e
-                        cenários para criar uma experiência de aprendizado envolvente. O objetivo é familiarizar
-                        os usuários com tópicos como as fases da Lua, eclipses, a visibilidade de diferentes
-                        constelações dependendo da localização geográfica na Terra, e a forma da Terra, através
-                        de interações e visualizações dinâmicas.</p>
-                    <p>Cada ator no projeto possui scripts que definem seu comportamento em resposta a eventos
-                        específicos, como o início do programa (quando a bandeira é clicada), cliques do
-                        usuário, ou mensagens recebidas. Estes eventos desencadeiam ações como mudanças de
-                        cenário, movimentos de atores, exibição ou ocultação de atores, e a apresentação de
-                        diálogos informativos. Por exemplo, ao clicar em determinados atores, os usuários podem
-                        "receber" uma prova, o que leva a uma mudança de cenário e a exibição de informações
-                        relevantes ou a visualização de uma constelação específica.</p>
-                    <p>A importância das ferramentas utilizadas, como os blocos de código visual do Scratch,
-                        reside na sua acessibilidade e na capacidade de engajar aprendizes de diferentes idades
-                        no pensamento computacional e na exploração de conceitos científicos de forma
-                        interativa. O uso de cenários, movimentos, e diálogos dinâmicos ajuda a criar uma
-                        experiência de aprendizado mais rica e memorável, encorajando os usuários a explorar e
-                        interagir com o conteúdo de maneira ativa, em vez de passivamente.</p>
+                    <p>Esse site foi cuidadosamente desenvolvida para proporcionar uma experiência visualmente impactante e intuitiva. A imagem de banner em destaque, com alta resolução e cores vibrantes, transporta o usuário diretamente para a natureza exuberante de nossos destinos.
+
+                        A seção de destinos populares apresenta uma curadoria de roteiros exclusivos, com fotos de alta qualidade e descrições concisas que destacam os principais atrativos de cada local. Ao clicar em um destino, o usuário é direcionado para uma página detalhada com mais informações e opções de reservas.</p>
                     <img src="img/site viagens.png" alt="Projeto 3" class="img-fluid w-100">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://scratch.mit.edu/projects/951732825/">Ver projeto ao vivo</a>
+                    <a href="file:///home/escola/Documentos/Maria-2024-main/index.html">Ver projeto ao vivo</a>
+                    <a href="https://github.com/MariaClara02/Maria-2024.git">Ver código do
+                        projeto</a>
                 </div>
             </div>
         </div>
